--- a/assets/css/success-style.css
+++ b/assets/css/success-style.css
@@ -6,5 +6,38 @@
 	height: 350px;
 	margin: 0 auto;
 }
+.bg-success1{
+	background-color: #134c99;
+}
+.text-color{
+	color:white;
+}
+.text-success1{
+	color: #134c99;
+}
+@font-face {
+font-family: 'thai_sans_literegular';
+src: url('thaisanslite_r1-webfont.eot');
+src: url('thaisanslite_r1-webfont.eot?#iefix') format('embedded-opentype'),
+     url('thaisanslite_r1-webfont.woff') format('woff'),
+     url('thaisanslite_r1-webfont.ttf') format('truetype');
+font-weight: normal;
+font-style: normal;
 
+}
+.font-special-style{
+    font-family: 'thai_sans_literegular', Lucida, Verdana, sans-serif;
+}
+.header-zone{
+	background-image: url("../img/BG1.jpg");
+	 background-repeat: repeat;
+	}
+	.bg-footer{
+	background-image: url("../img/BG2.jpg");
+	 background-repeat: repeat;
+	   background-position: center bottom;
+	}
+	.header-right a{
+		color:#ffff;
+	}
 /* @end */
